# rusty_time_note_desktop

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.tsx  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/migrations/: 202201192229__CREATE_MIGRATIONS_TABLE.sql  202201221034__CREATE_TESTE_TABLE.sql  202302040104__CREATE_NOTEBOOKS_TABLE.sql  202304071551__CREATE_TIMENOTES_TABLE.sql  202304071616__CREATE_TAGS_TABLES.sql  202304071620__CREATE_EXTERNAL_IDS_TABLES.sql
src-tauri/src/: db_manager.rs  entities.rs  main.rs  services.rs
src-tauri/src/entities/: external_id.rs  notebook.rs  tag.rs  timenote.rs
src-tauri/src/services/: notebook.rs  notebook_service.rs  timenote_service.rs
src/@types/components/NotebookList/: NotebookData.ts
src/@types/contexts/: AppContext.ts
src/@types/entities/Notebook/: index.ts
src/@types/entities/TimeNote/: index.ts
src/@types/hooks/FormWithValidationHook/: index.ts
src/components/AddNotebookButton/: index.tsx
src/components/BackButton/: index.tsx
src/components/NotebookList/: index.tsx
src/components/forms/NewNotebookForm/: index.tsx  newNotebookFormHook.ts
src/components/inputs/SelectInput/: SelectInput.tsx  index.tsx
src/contexts/: AppContext.tsx
src/hooks/FormWithValidationHook/: indext.tsx
src/locales/en/: en.json
src/locales/pt-br/: pt-br.json
src/pages/: Homepage.tsx
src/pages/notebooks/: NewNotebook.tsx  Notebook.module.css  Notebook.tsx
src/services/: NotebookService.ts  TimeNoteService.ts
src/utils/: GenericUtils.ts
(+6 files in other folders)
