[package]
name = "rusty-time-note"
version = "0.0.0"
description = "Rusty Time Note"
authors = ["Arthur Cruz <developer.arthur.cruz@gmail.com>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["shell-open"] }
rusqlite = { version="^0", features = ["bundled", "chrono"] }
log = {version= "0.4" }
fast_log = { version = "1.5" }
chrono = {version = "^0", features = ["serde"] }
tokio = { version = "1.27.0", features = ["full"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
